Fixed footer alignment and contact

--- a/src/components/Footer/scss/index.scss
+++ b/src/components/Footer/scss/index.scss
@@ -6,11 +6,16 @@
 
   .container {
     display: flex;
-    justify-content: center;
     flex-wrap: wrap;
+    justify-content: center;
+
+    @media (min-width: 700px) {
+      width: 50%;
+      justify-content: space-between;
+    }
 
     div:not(:last-of-type) {
-      padding-right: $spacer * 3;
+      padding-right: $spacer * 5;
     }
   }
 
@@ -19,6 +24,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    @media (max-width: 700px) {
+      padding: 0 $spacer * 5;
+    }
   }
 
   &__favicons {
@@ -42,7 +50,7 @@
 
     &-content {
       p {
-        margin-bottom: $spacer;
+        margin-bottom: $spacer / 2;
         font-size: $small-font-size;
         color: $gray-dark;
 
